// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component matches snapshot 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#1046DF] touch-manipulation text-base py-2.5 px-5 rounded-md min-h-touch-lg min-w-touch-lg bg-[#1046DF] text-white border border-transparent hover:bg-[#0D3AB7] active:bg-[#0A2E92] disabled:bg-[#CCCCCC] disabled:text-[#666666] disabled:border-transparent"
    data-cupcake-component="button"
    data-cupcake-size="large"
    data-cupcake-variant="primary"
  >
    <span>
      Snapshot Test
    </span>
  </button>
</div>
`;

exports[`ButtonGroup Component matches snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap md:flex-row gap-3 md:gap-4"
    data-cupcake-component="buttongroup"
  >
    <button
      class="inline-flex items-center justify-center font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#1046DF] touch-manipulation text-base py-2.5 px-5 rounded-md min-h-touch-lg min-w-touch-lg bg-[#1046DF] text-white border border-transparent hover:bg-[#0D3AB7] active:bg-[#0A2E92] disabled:bg-[#CCCCCC] disabled:text-[#666666] disabled:border-transparent"
      data-cupcake-component="button"
      data-cupcake-size="large"
      data-cupcake-variant="primary"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="inline-flex items-center justify-center font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#1046DF] touch-manipulation text-base py-2.5 px-5 rounded-md min-h-touch-lg min-w-touch-lg bg-white border border-[#1046DF] text-[#1046DF] hover:bg-[#EBF0FF] active:bg-[#EBF0FF]/70 disabled:bg-white disabled:text-[#666666] disabled:border-[#CCCCCC]"
      data-cupcake-component="button"
      data-cupcake-size="large"
      data-cupcake-variant="secondary"
    >
      <span>
        Secondary
      </span>
    </button>
  </div>
</div>
`;
